Correct home pg features alignmnt w/ icons & + footr social icons

--- a/css/main.css
+++ b/css/main.css
@@ -236,9 +236,17 @@ footer .social-icons {
 }
 
 footer .social-icons p {
+  background-color: #527158;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+footer .social-icons p i {
+  font-size: 1.3125em;
 }
 
 footer .copyright {
@@ -326,7 +334,7 @@ input[type=button] {
   margin: 30px 0;
 }
 
-.features .features-item-description {
+.features .features-items {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -338,7 +346,7 @@ input[type=button] {
   margin-bottom: 40px;
 }
 
-features p {
+.features p {
   text-align: center;
   margin: 0;
 }
@@ -616,8 +624,12 @@ features p {
     flex-basis: 50%;
   }
 
-  .features .feature-item-description {
+  .features .features-item-description {
     width: 62%;
+  }
+
+  .features i {
+    margin-bottom: 30px;
   }
 
   /*Reviews*/
@@ -664,6 +676,11 @@ features p {
 
   footer p {
     line-height: 1.285;
+  }
+
+  footer .social-icons {
+    width: 12.5em;
+    justify-content: space-between;
   }
 
   footer .copyright {
